Pull modifier key extraction into TestRunnerShared https://bugs.webkit.org/show_bug.cgi?id=231267

Reviewed by Tim Horton.

This patch pulls the code to extract modifier key information is pulled into a little class
called ModifierKeys in TestRunnerShared. That code is now shared between DRT and WKTR
for the existing implementations of keyDown.

* DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj:
* DumpRenderTree/mac/EventSendingController.mm:
(-[EventSendingController keyDown:withModifiers:withLocation:]):
* TestRunnerShared/cocoa/ModifierKeys.h: Added.
* TestRunnerShared/cocoa/ModifierKeys.mm: Added.
(-[ModifierKeys init]):
(-[ModifierKeys dealloc]):
(+[ModifierKeys modifierKeysWithKey:modifiers:keyLocation:]):
* WebKitTestRunner/WebKitTestRunner.xcodeproj/project.pbxproj:
* WebKitTestRunner/mac/EventSenderProxy.mm:
(WTR::EventSenderProxy::keyDown):


Canonical link: https://commits.webkit.org/242747@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283870 268f45cc-cd09-0410-ab3c-d52691b4dbfc